--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import "~ag-grid-community/dist/styles/ag-grid.css";
-@import "~ag-grid-community/dist/styles/ag-theme-balham.css";
+// Change all the default icons for the theme icons
+$ag-icons-path: "../node_modules/ag-grid-community/src/styles/ag-theme-balham/icons/";
+
+//@import "~ag-grid-community/dist/styles/ag-grid.css";
+// Themes
+//@import "~ag-grid-community/dist/styles/ag-theme-balham.css";
+
+
+@import "../node_modules/ag-grid-community/src/styles/ag-grid.scss";
+// Themes scss
+@import "../node_modules/ag-grid-community/src/styles/ag-theme-balham/sass/ag-theme-balham";
+@import "../node_modules/ag-grid-community/src/styles/ag-theme-material/sass/ag-theme-material";
+
+
+// Modifying ag-grid styles
+$odd-row-background-color: #000000;
