--- a/src/app/getting-started/getting-started/getting-started.component.html
+++ b/src/app/getting-started/getting-started/getting-started.component.html
@@ -14,7 +14,7 @@
   <ag-grid-angular
     #agGridGroup
     style="width: 500px; height: 500px;"
-    class="ag-theme-balham"
+    class="ag-theme-material"
     [rowData]="groupRowData$ | async"
     [defaultColDef]="defaultColDef"
     [columnDefs]="groupColumnDefs"
