In progress: adding infinite scroll example

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@ $ag-icons-path: "../node_modules/ag-grid-community/src/styles/ag-theme-balham/ic
 @import "../node_modules/ag-grid-community/src/styles/ag-grid.scss";
 // Themes scss
 @import "../node_modules/ag-grid-community/src/styles/ag-theme-balham/sass/ag-theme-balham";
+@import "../node_modules/ag-grid-community/src/styles/ag-theme-balham-dark/sass/ag-theme-balham-dark";
 @import "../node_modules/ag-grid-community/src/styles/ag-theme-material/sass/ag-theme-material";
 
 
