--- a/src/app/frontend-based/ag-frontend-based/ag-frontend-based.component.html
+++ b/src/app/frontend-based/ag-frontend-based/ag-frontend-based.component.html
@@ -1,3 +1,17 @@
-<p>
-  ag-frontend-based works!
-</p>
+<div style="height: 100%; padding-top: 26px; box-sizing: border-box;">
+  <ag-grid-angular
+    #agGrid
+    style="width: 100%; height: 100%;"
+    id="myGrid"
+    class="ag-theme-balham-dark"
+    [columnDefs]="columnDefs"
+    [defaultColDef]="defaultColDef"
+    [rowModelType]="rowModelType"
+    [cacheBlockSize]="cacheBlockSize"
+    [maxBlocksInCache]="maxBlocksInCache"
+    [animateRows]="true"
+    [debug]="true"
+    [rowData]="rowData"
+    (gridReady)="onGridReady($event)"
+  ></ag-grid-angular>
+</div>
